# boca-stresser

./: .gitignore  PLAN.md  README.md  diagnostic.py  geminisession.json  pyproject.toml
boca_stress/: agents.py  cli.py  config.py  models.py  simulator.py  tui.py
boca_stress.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
boca_stress/backends/: http.py
boca_stress/boca/: admin.py  team.py
boca_stress/metrics/: collector.py  docker.py  postgres.py  ssh.py
problems/: times_teams.txt
problems/__MACOSX/: ._times_boca.txt  ._times_teams.txt
solutions/: solutions.yml
solutions/A/: A.java  main.cpp  main.py  mle.cpp  mle.py  output.cpp  stack.cpp  tle.cpp  tle.py
solutions/B/: B.java  main.cpp  main.py
solutions/C/: C.java  main.cpp  main.py
solutions/D/: D.java  main.cpp  main.py
solutions/E/: E.java  main.cpp  main.py
solutions/F/: F.java  main.cpp  main.py
solutions/G/: G.java  main.cpp  main.py
solutions/H/: H.java  main.cpp  main.py
solutions/I/: I.java  main.cpp  main.py
solutions/J/: J.java  main.cpp  main.py
solutions/K/: K.java  main.cpp  main.py
solutions/L/: L.java  main.cpp  main.py
solutions/M/: M.java  main.cpp  main.py
solutions/N/: N.java  main.cpp  main.py
tests/: test_models.py
