[project]
name = "boca-stress"
version = "0.1.0"
description = "A stress testing tool for BOCA Online Judge"
authors = [{name = "Developer"}]
dependencies = [
    "typer[all]",
    "rich",
    "pydantic",
    "httpx",
    "pyyaml",
    "pydantic-settings",
    "asyncio",
    "beautifulsoup4",
    "asyncssh",
    "aiodocker",
    "asyncpg",
]
requires-python = ">=3.12"

[project.scripts]
boca-stress = "boca_stress.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.setuptools.packages.find]
include = ["boca_stress*"]
